--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -6,7 +6,11 @@
 <div class="row">
   <ul>
   {% for student in object_list %}
-    <li>{{ student.name }} {{ student.group }} <br> Преподаватели: {{ student.teachers.name }} {{ student.teachers.subject }}</li>
+    <li>{{ student.name }} {{ student.group }} <br> Преподаватели:
+      {% for teacher in student.teachers.all %}
+      {{ teacher.name }} {{ teacher.subject }}
+    {% endfor %}
+    </li>
   {% endfor %}
   </ul>
 </div>
